// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`css-modules-dts-loader > Basic Functionality > should generate .d.ts file for CSS modules 1`] = `
"// This file is automatically generated.
// Please do not change this file!
export const validClass: string;
"
`;

exports[`css-modules-dts-loader > Basic Functionality > should handle empty CSS files 1`] = `
"// This file is automatically generated.
// Please do not change this file!
"
`;

exports[`css-modules-dts-loader > JavaScript Keywords as Class Names > should handle JS keyword class names with namedExport=false 1`] = `
"// This file is automatically generated.
// Please do not change this file!
interface CssExports {
  "class": string;
  "export": string;
  "for": string;
}

export const cssExports: CssExports;
export = cssExports;
"
`;

exports[`css-modules-dts-loader > JavaScript Keywords as Class Names > should handle JS keyword class names with namedExport=true 1`] = `
"// This file is automatically generated.
// Please do not change this file!
interface CssExports {
  "validClass": string;
  "class": string;
  "export": string;
  "import": string;
}

export const cssExports: CssExports;
export = cssExports;
"
`;

exports[`css-modules-dts-loader > Options: camelCase > should convert kebab-case class names to camelCase 1`] = `
"// This file is automatically generated.
// Please do not change this file!
export const kebabCaseClass: string;
"
`;

exports[`css-modules-dts-loader > Options: indentStyle and indentSize > should use custom space indentation size when specified 1`] = `
"// This file is automatically generated.
// Please do not change this file!
export const testClass: string;
"
`;

exports[`css-modules-dts-loader > Options: indentStyle and indentSize > should use tabs for indentation when specified 1`] = `
"// This file is automatically generated.
// Please do not change this file!
export const testClass: string;
"
`;

exports[`css-modules-dts-loader > Options: namedExport > should generate interface export when namedExport is false 1`] = `
"// This file is automatically generated.
// Please do not change this file!
interface CssExports {
  "zebra": string;
  "alpha": string;
  "beta": string;
}

export const cssExports: CssExports;
export default cssExports;
"
`;

exports[`css-modules-dts-loader > Options: namedExport > should generate named exports when namedExport is true 1`] = `
"// This file is automatically generated.
// Please do not change this file!
export const zebra: string;
export const alpha: string;
export const beta: string;
"
`;

exports[`css-modules-dts-loader > Options: quote > should use single quotes when specified 1`] = `
"// This file is automatically generated.
// Please do not change this file!
export const testClass: string;
"
`;

exports[`css-modules-dts-loader > Options: sort > should sort class names alphabetically when enabled 1`] = `
"// This file is automatically generated.
// Please do not change this file!
export const alpha: string;
export const beta: string;
export const zebra: string;
"
`;
